Apply autoformat and correct bugs in notebook

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Convert all XML into one JSON file\n",
-    "!scraping/owners/multiple_xml_to_single_json.sh all_owners_dirty.json 2>/dev/null"
+    "!scraping/owners/multiple_xml_to_single_json.sh all_owners_dirty.json "
    ]
   },
   {
@@ -419,7 +419,7 @@
     "\n",
     "features = [\n",
     "    {'parc_num':feature['properties']['NO_PARC'],\n",
-    "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
+    "    'owner':feature['properties']['proprio']} for feature in geo_parcelles['features']\n",
     "]\n",
     "parcels = pd.DataFrame.from_records(features)\n",
     "len(parcels)\n"
@@ -983,38 +983,56 @@
     "import scipy\n",
     "\n",
     "covariates = pd.DataFrame.from_records(\n",
-    "    [{\n",
-    "        'owner_type':categorize(offer['proprio']),\n",
-    "        'price/m2':offer['CHF/m2']\n",
-    "     } for offer in rent_prices if offer['proprio'] is not None]\n",
+    "    [\n",
+    "        {\"owner_type\": categorize(offer[\"proprio\"]), \"price/m2\": offer[\"CHF/m2\"]}\n",
+    "        for offer in rent_prices\n",
+    "        if offer[\"proprio\"] is not None\n",
+    "    ]\n",
     ")\n",
-    "covariates['owner_type'] = covariates['owner_type'].astype('category')\n",
-    "samples_per_cat = covariates['owner_type'].value_counts()\n",
+    "covariates[\"owner_type\"] = covariates[\"owner_type\"].astype(\"category\")\n",
+    "samples_per_cat = covariates[\"owner_type\"].value_counts()\n",
     "\n",
     "covariates = pd.get_dummies(covariates)\n",
     "\n",
-    "#drop one indicator to avoid multiple colinearity\n",
-    "covariates = covariates.drop('owner_type_private', axis='columns')\n",
+    "# drop one indicator to avoid multiple colinearity\n",
+    "covariates = covariates.drop(\"owner_type_private\", axis=\"columns\")\n",
     "\n",
-    "coeffs = np.empty(covariates.shape) #columns: num of covariates minus the response (y) plus 1 for the intercept\n",
-    "#bootstrap confidence interval for linear regression coefficients\n",
+    "coeffs = np.empty(covariates.shape)  \n",
+    "\n",
+    "# columns: num of covariates minus the response (y) plus 1 for the intercept\n",
+    "\n",
+    "# bootstrap confidence interval for linear regression coefficients\n",
     "for i in range(covariates.shape[0]):\n",
-    "    sample = covariates.values[np.random.choice(\n",
-    "        covariates.shape[0], size=covariates.shape[0], replace=True)]\n",
+    "    sample = covariates.values[\n",
+    "        np.random.choice(covariates.shape[0], size=covariates.shape[0], replace=True)\n",
+    "    ]\n",
     "    lm = linear_model.LinearRegression(fit_intercept=True)\n",
-    "    X = sample[:,1:]\n",
-    "    y = sample[:,0]\n",
+    "    X = sample[:, 1:]\n",
+    "    y = sample[:, 0]\n",
     "    lm.fit(X, y)\n",
-    "    coeffs[i,0] = lm.intercept_\n",
-    "    coeffs[i,1:] = lm.coef_\n",
+    "    coeffs[i, 0] = lm.intercept_\n",
+    "    coeffs[i, 1:] = lm.coef_\n",
     "\n",
-    "lower, upper = np.quantile(coeffs, q=(0.025,0.975), axis=0)\n",
+    "lower, upper = np.quantile(coeffs, q=(0.025, 0.975), axis=0)\n",
     "\n",
-    "print('%-40s\\t%s\\t%s\\t%s' % ('feature', '.025 qtile', '.975 qtile', 'n'))\n",
+    "print(\"%-40s\\t%s\\t%s\\t%s\" % (\"feature\", \".025 qtile\", \".975 qtile\", \"n\"))\n",
     "print()\n",
-    "print('%-40s:\\t%f\\t%f' % ('intercept', lower[0], upper[0]))\n",
+    "print(\"%-40s:\\t%f\\t%f\" % (\"intercept\", lower[0], upper[0]))\n",
+    "\n",
     "for typ, lower_q, upper_q in zip(covariates.columns[1:], lower[1:], upper[1:]):\n",
-    "    print('%-40s:\\t%f\\t%f\\t%d' % (typ, lower_q, upper_q, samples_per_cat[typ.split('_')[-1]]))"
+    "    print(\n",
+    "        \"%-40s:\\t%f\\t%f\\t%d\"\n",
+    "        % (typ, lower_q, upper_q, samples_per_cat[typ.split(\"_\")[-1]])\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rent_prices.head()\n"
    ]
   },
   {
