Fix more bugs in notebook.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -419,7 +419,7 @@
     "\n",
     "features = [\n",
     "    {'parc_num':feature['properties']['NO_PARC'],\n",
-    "    'owner':feature['properties']['proprio']} for feature in geo_parcelles['features']\n",
+    "    'owner':feature['properties']['proprio']} for feature in geo_parcels['features']\n",
     "]\n",
     "parcels = pd.DataFrame.from_records(features)\n",
     "len(parcels)\n"
@@ -872,7 +872,7 @@
     "# for each parcels, construct a Polygon\n",
     "def get_parcel_polygons():\n",
     "    parcel_polygons = []\n",
-    "    for parcel in geo['features']:\n",
+    "    for parcel in geo_parcels['features']:\n",
     "        coords = parcel['geometry']['coordinates'][0][0]\n",
     "        num_parc = parcel['properties']['NO_PARC']\n",
     "        proprio = parcel['properties']['proprio']\n",
@@ -888,7 +888,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "# For each offer, assign a propretary\n",
     "for offer in rent_prices:\n",
     "    offer_pos = Point(offer['position'])\n",
@@ -1013,7 +1012,7 @@
     "    coeffs[i, 0] = lm.intercept_\n",
     "    coeffs[i, 1:] = lm.coef_\n",
     "\n",
-    "lower, upper = np.quantile(coeffs, q=(0.025, 0.975), axis=0)\n",
+    "lower, upper = np.percentile(coeffs, q=(5, 97.5), axis=0)\n",
     "\n",
     "print(\"%-40s\\t%s\\t%s\\t%s\" % (\"feature\", \".025 qtile\", \".975 qtile\", \"n\"))\n",
     "print()\n",
