Linear regression for distance.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -983,7 +983,10 @@
     "\n",
     "covariates = pd.DataFrame.from_records(\n",
     "    [\n",
-    "        {\"owner_type\": categorize(offer[\"proprio\"]), \"price/m2\": offer[\"CHF/m2\"]}\n",
+    "        {\n",
+    "            \"owner_type\": categorize(offer[\"proprio\"]),\n",
+    "            \"price/m2\": offer[\"CHF/m2\"],\n",
+    "        }\n",
     "        for offer in rent_prices\n",
     "        if offer[\"proprio\"] is not None\n",
     "    ]\n",
@@ -996,14 +999,16 @@
     "# drop one indicator to avoid multiple colinearity\n",
     "covariates = covariates.drop(\"owner_type_private\", axis=\"columns\")\n",
     "\n",
-    "coeffs = np.empty(covariates.shape)  \n",
+    "coeffs = np.empty(covariates.shape)\n",
     "\n",
     "# columns: num of covariates minus the response (y) plus 1 for the intercept\n",
     "\n",
     "# bootstrap confidence interval for linear regression coefficients\n",
     "for i in range(covariates.shape[0]):\n",
     "    sample = covariates.values[\n",
-    "        np.random.choice(covariates.shape[0], size=covariates.shape[0], replace=True)\n",
+    "        np.random.choice(\n",
+    "            covariates.shape[0], size=covariates.shape[0], replace=True\n",
+    "        )\n",
     "    ]\n",
     "    lm = linear_model.LinearRegression(fit_intercept=True)\n",
     "    X = sample[:, 1:]\n",
@@ -1012,7 +1017,7 @@
     "    coeffs[i, 0] = lm.intercept_\n",
     "    coeffs[i, 1:] = lm.coef_\n",
     "\n",
-    "lower, upper = np.percentile(coeffs, q=(5, 97.5), axis=0)\n",
+    "lower, upper = np.percentile(coeffs, q=(2.5, 97.5), axis=0)\n",
     "\n",
     "print(\"%-40s\\t%s\\t%s\\t%s\" % (\"feature\", \".025 qtile\", \".975 qtile\", \"n\"))\n",
     "print()\n",
@@ -1022,7 +1027,14 @@
     "    print(\n",
     "        \"%-40s:\\t%f\\t%f\\t%d\"\n",
     "        % (typ, lower_q, upper_q, samples_per_cat[typ.split(\"_\")[-1]])\n",
-    "    )"
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear regression on distance"
    ]
   },
   {
@@ -1031,7 +1043,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rent_prices.head()\n"
+    "from geopy.distance import great_circle\n",
+    "\n",
+    "position = 46.50766, 6.62758\n",
+    "\n",
+    "rent_positions = pd.DataFrame.from_records(\n",
+    "    [\n",
+    "        {\n",
+    "            \"lat\": offer[\"position\"][1],\n",
+    "            \"long\": offer[\"position\"][0],\n",
+    "            \"CHF/m2\": offer[\"CHF/m2\"],\n",
+    "        }\n",
+    "        for offer in rent_prices\n",
+    "    ]\n",
+    ").dropna()\n",
+    "\n",
+    "rent_distances = rent_positions.apply(\n",
+    "    lambda row: great_circle((row.lat, row.long), position).km, axis=1\n",
+    ")\n",
+    "rent_distances = rent_distances.to_frame(\"km\")\n",
+    "rent_distances[\"CHF/m2\"] = rent_positions[\"CHF/m2\"]\n",
+    "rent_distances.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lmplot(x=\"km\", y=\"CHF/m2\", data=rent_distances);\n",
+    "plt.title(\"Distance from the station vs. rent prices\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distance_model = scipy.stats.linregress(\n",
+    "    rent_distances.km, rent_distances[\"CHF/m2\"]\n",
+    ")\n",
+    "\n",
+    "def print_model(model):\n",
+    "    for stat in [\"intercept\", \"slope\", \"stderr\", \"pvalue\"]:\n",
+    "        print(stat, \": \", getattr(model, stat))\n",
+    "\n",
+    "        \n",
+    "print_model(distance_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat_model = scipy.stats.linregress(\n",
+    "    rent_positions.lat ** 2, rent_positions[\"CHF/m2\"]\n",
+    ")\n",
+    "long_model = scipy.stats.linregress(\n",
+    "    rent_positions.long ** 2, rent_positions[\"CHF/m2\"]\n",
+    ")\n",
+    "\n",
+    "print_model(lat_model)\n",
+    "print()\n",
+    "print_model(long_model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rents_per_quartier = pd.DataFrame.from_records(\n",
+    "    [\n",
+    "        {\n",
+    "            \"lat\": offer[\"position\"][1],\n",
+    "            \"long\": offer[\"position\"][0],\n",
+    "            \"CHF/m2\": offer[\"CHF/m2\"],\n",
+    "            \"surface\": float(offer[\"surface\"]),\n",
+    "            \"proprio\": offer[\"proprio\"],\n",
+    "            \"quartier\": offer[\"quartier\"],\n",
+    "        }\n",
+    "        for offer in rent_prices\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "rents_per_quartier[\"distance\"] = rent_distances.km\n",
+    "rents_per_quartier = rents_per_quartier.dropna()\n",
+    "\n",
+    "print_model(\n",
+    "    scipy.stats.linregress(\n",
+    "        rents_per_quartier.surface, rents_per_quartier[\"CHF/m2\"]\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lmplot(x=\"surface\", y=\"CHF/m2\", data=rents_per_quartier);"
    ]
   },
   {
@@ -1240,7 +1357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polygons_df['owner_type'].value_counts().plot.pie()"
+    "polygons_df['owner_type'].value_counts().plot.pie();"
    ]
   },
   {
@@ -1249,7 +1366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "types.value_counts().plot.pie()"
+    "types.value_counts().plot.pie();"
    ]
   },
   {
@@ -1287,6 +1404,13 @@
     ").add_to(m)\n",
     "m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
