--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -430,7 +430,7 @@
     "\n",
     "features = [\n",
     "    {'parc_num':feature['properties']['NO_PARC'],\n",
-    "    'owner':feature['properties']['proprio']} for feature in geo['features']\n",
+    "    'owner':feature['properties']['proprio']} for feature in geo_parcels['features']\n",
     "]\n",
     "parcels = pd.DataFrame.from_records(features)\n",
     "len(parcels)\n"
@@ -883,7 +883,7 @@
     "# for each parcels, construct a Polygon\n",
     "def get_parcel_polygons():\n",
     "    parcel_polygons = []\n",
-    "    for parcel in geo['features']:\n",
+    "    for parcel in geo_parcels['features']:\n",
     "        coords = parcel['geometry']['coordinates'][0][0]\n",
     "        num_parc = parcel['properties']['NO_PARC']\n",
     "        proprio = parcel['properties']['proprio']\n",
@@ -900,7 +900,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# For each offer, assign a propretary\n",
+    "# For each offer, assign an owner\n",
     "for offer in rent_prices:\n",
     "    offer_pos = Point(offer['position'])\n",
     "    for parc_n, proprio, poly in parcel_polygons:\n",
@@ -1219,10 +1219,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO explain\n",
+    "EARTH_RADIUS_METERS = 6.3e6\n",
+    "meters_per_easting_degree = 2*(EARTH_RADIUS_METERS*np.sin(np.pi/4))*np.pi/360\n",
+    "meters_per_northing_degree = 2*EARTH_RADIUS_METERS*np.pi/360"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meters_per_easting_degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meters_per_northing_degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_distance2(delta_east, delta_north):\n",
+    "    \"\"\"squared distance in meters\"\"\"\n",
+    "    return (delta_east*meters_per_easting_degree)**2 +\\\n",
+    "        (delta_north*meters_per_northing_degree)**2\n",
     "K = 5\n",
     "types = polygons_df[['parc_no', 'owner_type']].copy().set_index('parc_no').sort_index()['owner_type']\n",
     "for (idx, (parc_no, proprio, _, owner_type, x, y)) in polygons_df.iterrows():\n",
-    "    distances2 = (polygons_df['x'] - x)**2 + (polygons_df['y'] - y)**2\n",
+    "    distances2 = compute_distance2(polygons_df['x'] - x, polygons_df['y'] - y)\n",
     "    neigh = distances2.sort_values()[:K]\n",
     "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
     "    types.loc[parc_no] = neighbor_parcels['owner_type'].value_counts().index[0]"
@@ -1244,6 +1278,69 @@
    "outputs": [],
    "source": [
     "types.value_counts().plot.pie()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighbor_parcels.group_by('owner_type')."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighbor_parcels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighbor_parcels.apply(print, axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_distance2(delta_east, delta_north):\n",
+    "    \"\"\"squared distance in meters\"\"\"\n",
+    "    return (delta_east*meters_per_easting_degree)**2 +\\\n",
+    "        (delta_north*meters_per_northing_degree)**2\n",
+    "\n",
+    "def polygons_intersection(poly):\n",
+    "    def inters(serie):\n",
+    "            return serie['poly'].intersection(poly).area\n",
+    "    return inters\n",
+    "radius = 100\n",
+    "types = polygons_df[['parc_no', 'owner_type']].copy().set_index('parc_no').sort_index()['owner_type']\n",
+    "for (idx, (parc_no, proprio, poly, owner_type, x, y)) in polygons_df.iterrows():\n",
+    "    distances2 = compute_distance2(polygons_df['x'] - x, polygons_df['y'] - y)\n",
+    "    neigh = distances2[distances2 < radius**2]\n",
+    "    circle = poly.centroid.buffer(radius/meters_per_easting_degree)\n",
+    "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
+    "    neighbor_parcels['intersection'] = neighbor_parcels.apply(polygons_intersection(circle), axis='columns')\n",
+    "    intersection_per_cat = neighbor_parcels.groupby('owner_type')['intersection'].sum()\n",
+    "    types.loc[parc_no] = intersection_per_cat.sort_values().index[-1]"
    ]
   },
   {
