General refactor, bugfix for knn, rents per parcels plot.

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Who owns Lausanne? \n",
+    "# Who owns Lausanne? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installation\n",
+    "\n",
+    "In order to run this notebook you will need multiple dependecies. We assume you have a running `conda` distribution.\n",
+    "\n",
+    " - `numpy` needs to be in version `>=0.15`\n",
+    " - The JSON processing tool `jq` is needed. Install with your OS' package manager (e.g. `brew install jq`).\n",
+    " - `pip install yq geopy shapely`\n",
+    " - If you want to have a look at the raw geographical data you have to intall [QGIS](https://www.qgis.org/en/site/), an open source geo information system tool.\n",
+    "\n",
+    "_If you are running an older version of macOS (e.g. 10.11) you might need to call `ulimit -n 1024` in the terminal before starting `jupyter`. This can avoid a bug with one of the preprocessing scripts._\n",
     "\n",
     "## 1. Public data and owners\n",
     "\n",
@@ -99,6 +115,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you see errors of the form\n",
+    "```\n",
+    "jq: error (at <stdin>:1): Cannot iterate over null (null)\n",
+    "```\n",
+    "you don't have to worry. These are just errors, when `jq` encounters the end of a file. The script is still working correctly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.1.3 Remove duplicated and  clean owners JSON\n",
     "The generated `all_owners_dirty.json` JSON has duplicate entries, entries concerning other communes than Lausanne and entries with missing owners. Furthermore, JSON is not the best format to handle tabular data. The code in [`scraping/owners/owner_json_to_clean_csv.py`](/edit/scraping/owners/owner_json_to_clean_csv.py) cleans the duplicates and tranfsorms the data into `all_owners.csv` CSV file."
    ]
@@ -170,6 +197,9 @@
     "\n",
     "import seaborn as sns\n",
     "sns.set()\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "import cleaning"
    ]
@@ -359,11 +389,9 @@
    "outputs": [],
    "source": [
     "import folium\n",
+    "from tools import *\n",
     "\n",
-    "!mkdir export\n",
-    "\n",
-    "def getMap():\n",
-    "    return folium.Map([46.524, 6.63], tiles='cartodbpositron', zoom_start=14)"
+    "!mkdir export"
    ]
   },
   {
@@ -522,16 +550,6 @@
    "metadata": {},
    "source": [
     "## 2. Rents data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
    ]
   },
   {
@@ -1165,8 +1183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tools import heatmap_prices_from_json\n",
-    "heatmap_prices_from_json(rent_prices)"
+    "import tools\n",
+    "tools.heatmap_prices_from_json(rent_prices)"
    ]
   },
   {
@@ -1235,8 +1253,8 @@
     "\n",
     "train = pd_parcels_rent['position'].apply(lambda r: pd.Series(r))\n",
     "train = pd.concat([pd_parcels_rent['CHF/m2'], train], axis='columns')\n",
-    "train.columns = ['target', 'pos_x', 'pos_y']\n",
-    "train.head(2)"
+    "train.columns = ['target', 'long', 'lat']\n",
+    "train.head()"
    ]
   },
   {
@@ -1247,20 +1265,12 @@
    "source": [
     "# Prepare the data to be predicted\n",
     "\n",
-    "with open('data/raw/maps/addresses_batiments.geojson') as geojson:\n",
-    "    addresses_batiments = json.load(geojson)\n",
-    "addresses_batiments.keys()\n",
-    "\n",
     "# select 'id' and 'position' of parcels\n",
-    "features = [\n",
-    "    {'fake_id': str(parc['properties']['NUMCOM']) + str(parc['properties']['CD_RUE']),\n",
-    "     'position': parc['geometry']['coordinates']} for parc in addresses_batiments['features']\n",
-    "]\n",
+    "features = polygons_df[[\"x\", \"y\", \"parc_no\"]]\n",
+    "features.columns = [\"long\", \"lat\", \"parc_no\"]\n",
     "\n",
-    "\n",
-    "parcelles = pd.DataFrame.from_records(features)\n",
-    "predict = parcelles['position'].apply(lambda row: pd.Series(row))\n",
-    "predict.head(2)"
+    "predict = features[[\"lat\", \"long\"]]\n",
+    "predict.head()\n"
    ]
   },
   {
@@ -1271,8 +1281,12 @@
    "source": [
     "# Predict prices\n",
     "from machine_learning import model_price_knn\n",
-    "prices, rmse = model_price_knn(train, predict, k=[5])\n",
-    "pd.DataFrame(rmse).plot();"
+    "\n",
+    "prices, rmse, ks = model_price_knn(train, predict, np.arange(1, 50))\n",
+    "\n",
+    "pd.DataFrame(rmse, ks).plot(legend=False);\n",
+    "plt.xlabel(\"k\");\n",
+    "plt.ylabel(\"rmse\");"
    ]
   },
   {
@@ -1289,10 +1303,10 @@
    "outputs": [],
    "source": [
     "# Construct pandas with position and price for all parcelles\n",
-    "prices_for_all_parcelles = parcelles\n",
-    "prices_for_all_parcelles['price'] = prices\n",
+    "prices_for_all_parcels = features.copy()\n",
+    "prices_for_all_parcels['price'] = prices\n",
     "\n",
-    "prices_for_all_parcelles.head(2)"
+    "prices_for_all_parcels.head()"
    ]
   },
   {
@@ -1302,9 +1316,8 @@
    "outputs": [],
    "source": [
     "# Save heatmap with prices for each parcelle\n",
-    "from tools import heatmap_prices_from_pd\n",
-    "hm = heatmap_prices_from_pd(prices_for_all_parcelles)\n",
-    "hm.save('export/heatmap_prices_all_parcellesk=5.html')"
+    "hm = tools.heatmap_prices_per_parcels(geo_parcels, prices_for_all_parcels)\n",
+    "hm.save('export/heatmap_prices_all_parcelles.html')"
    ]
   },
   {
