diversity of owner types

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1074,7 +1074,7 @@
    "outputs": [],
    "source": [
     "sns.lmplot(x=\"km\", y=\"CHF/m2\", data=rent_distances);\n",
-    "plt.title(\"Distance from the station vs. rent prices\");"
+    "plt.title(\"Distance from the Ouchy port vs. rent prices\");"
    ]
   },
   {
@@ -1330,6 +1330,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "polygons_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "polygons_df = pd.DataFrame.from_records(get_parcel_polygons())\n",
     "polygons_df.columns = ('parc_no', 'proprio', 'poly')\n",
     "polygons_df['owner_type'] = polygons_df['proprio'].apply(categorize)\n",
@@ -1410,47 +1419,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories_bins"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neighbor_parcels.group_by('owner_type')."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neighbor_parcels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neighbor_parcels.apply(print, axis='columns')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def compute_distance2(delta_east, delta_north):\n",
     "    \"\"\"squared distance in meters\"\"\"\n",
     "    return (delta_east*meters_per_easting_degree)**2 +\\\n",
-    "        (delta_north*meters_per_northing_degree)**2\n",
-    "\n",
+    "        (delta_north*meters_per_northing_degree)**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def polygons_intersection(poly):\n",
     "    def inters(serie):\n",
     "            return serie['poly'].intersection(poly).area\n",
@@ -1498,7 +1478,6 @@
     "    geo_parcels, \n",
     "    style_function=style_function,\n",
     "    # show the owner at hover\n",
-    "    tooltip=folium.GeoJsonTooltip(['proprio'])\n",
     ").add_to(m)\n",
     "m"
    ]
@@ -1508,7 +1487,73 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def polygons_intersection(poly):\n",
+    "    def inters(serie):\n",
+    "            return serie['poly'].intersection(poly).area\n",
+    "    return inters\n",
+    "radius = 100\n",
+    "diverse = polygons_df[['parc_no', 'owner_type']].copy().set_index('parc_no').sort_index()['owner_type']\n",
+    "for (idx, (parc_no, proprio, poly, owner_type, x, y)) in polygons_df.iterrows():\n",
+    "    distances2 = compute_distance2(polygons_df['x'] - x, polygons_df['y'] - y)\n",
+    "    neigh = distances2[distances2 < radius**2]\n",
+    "    circle = poly.centroid.buffer(radius/meters_per_easting_degree)\n",
+    "    neighbor_parcels = pd.concat((polygons_df, neigh), axis='columns', join='inner')\n",
+    "    neighbor_parcels['intersection'] = neighbor_parcels.apply(polygons_intersection(circle), axis='columns')\n",
+    "    intersection_per_owner = neighbor_parcels.groupby('proprio')['intersection'].sum()\n",
+    "    p = intersection_per_owner / intersection_per_cat.sum()\n",
+    "    diverse.loc[parc_no] = scipy.stats.entropy(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import cm\n",
+    "from matplotlib import colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = getMap()\n",
+    "#TODO weight by area\n",
+    "min_s, max_s = 1, np.quantile(diverse.values, q = .95)\n",
+    "\n",
+    "def style_function(feature):\n",
+    "    def entropy_color(entropy):\n",
+    "        rgb = cm.RdGy( (entropy - min_s) / (max_s - min_s))\n",
+    "        return colors.rgb2hex(rgb)\n",
+    "    \n",
+    "    parc_num = feature['properties']['NO_PARC']\n",
+    "    entropy = diverse[parc_num]    \n",
+    "    return {\n",
+    "        'stroke':False,\n",
+    "        'fillColor': entropy_color(entropy),\n",
+    "        'fillOpacity':0.8\n",
+    "    }\n",
+    "\n",
+    "folium.GeoJson(\n",
+    "    geo_parcels, \n",
+    "    style_function=style_function,\n",
+    "    # show the owner at hover\n",
+    ").add_to(m)\n",
+    "m"
+   ]
   }
  ],
  "metadata": {
