Heatmap price by quartier

--- a/Who owns lausanne.ipynb
+++ b/Who owns lausanne.ipynb
@@ -1264,13 +1264,18 @@
    "outputs": [],
    "source": [
     "# Prepare the data to be predicted\n",
+    "polygons_df = pd.DataFrame.from_records(get_parcel_polygons())\n",
+    "polygons_df.columns = ('parc_no', 'proprio', 'poly')\n",
+    "polygons_df['owner_type'] = polygons_df['proprio'].apply(categorize)\n",
+    "polygons_df['x'] = polygons_df['poly'].apply(lambda poly: poly.centroid.x)\n",
+    "polygons_df['y'] = polygons_df['poly'].apply(lambda poly: poly.centroid.y)\n",
     "\n",
     "# select 'id' and 'position' of parcels\n",
     "features = polygons_df[[\"x\", \"y\", \"parc_no\"]]\n",
     "features.columns = [\"long\", \"lat\", \"parc_no\"]\n",
     "\n",
     "predict = features[[\"lat\", \"long\"]]\n",
-    "predict.head()\n"
+    "predict.head()"
    ]
   },
   {
@@ -1334,19 +1339,6 @@
     "- For each parcel find its nearest neighbors\n",
     "- compute the distribution of ownership for each neihborhood\n",
     "- assign to the parcel the ownership in the neighborhood"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "polygons_df = pd.DataFrame.from_records(get_parcel_polygons())\n",
-    "polygons_df.columns = ('parc_no', 'proprio', 'poly')\n",
-    "polygons_df['owner_type'] = polygons_df['proprio'].apply(categorize)\n",
-    "polygons_df['x'] = polygons_df['poly'].apply(lambda poly: poly.centroid.x)\n",
-    "polygons_df['y'] = polygons_df['poly'].apply(lambda poly: poly.centroid.y)"
    ]
   },
   {
@@ -1419,11 +1411,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Price by quartier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To correctly exdcute this section, please install `geopandas`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_quartier(lat, long):\n",
+    "    for quartier in quartiers['features']:\n",
+    "        # skip because we don't have owner data for forest areas\n",
+    "        if quartier['properties']['Name'] == '90 - Zones foraines':  \n",
+    "            return None\n",
+    "\n",
+    "        \"\"\"Given longitute and latitude, return quartier in Lausanne\"\"\"\n",
+    "        pos = Point(long, lat)\n",
+    "        quartier_vertices = [(east, north) for east, north, z in quartier['geometry']['coordinates'][0]]\n",
+    "        quartier_poly = Polygon(quartier_vertices)\n",
+    "        if quartier_poly.contains(pos):\n",
+    "            return quartier['properties']['Name']\n",
+    "\n",
+    "prices_for_all_parcels_with_quartiers = prices_for_all_parcels.copy()\n",
+    "\n",
+    "prices_for_all_parcels_with_quartiers['quartier'] = \\\n",
+    "    prices_for_all_parcels_with_quartiers[['lat', 'long']] \\\n",
+    "    .apply(lambda row: get_quartier(row['lat'], row['long']), axis='columns')\n",
+    "\n",
+    "price_by_quartiers_all = prices_for_all_parcels_with_quartiers[['price', 'quartier']].groupby('quartier').agg('median')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import colors, cm\n",
+    "import branca.colormap as cmb\n",
+    "\n",
+    "def style_function_quartiers(feature):    \n",
+    "    min_price, max_price = np.quantile(price_by_quartiers_all[\"price\"], q=(0.05, 0.90))\n",
+    "\n",
+    "    colormap = cmb.linear.RdYlGn_06.scale(min_price, max_price)\n",
+    "    \n",
+    "    # invert colors\n",
+    "    colormap.colors = colormap.colors[::-1]\n",
+    "    colormap.caption = \"Rent price by quartiers\"\n",
+    "    \n",
+    "    \n",
+    "    quartier_name = feature['properties'][\"Name\"]\n",
+    "    if (quartier_name == '90 - Zones foraines'):\n",
+    "        price = 0\n",
+    "    else:\n",
+    "        price = price_by_quartiers_all.loc[quartier_name].values[0]\n",
+    "        \n",
+    "    return {\"stroke\": False, \"fillColor\": colormap(price), \"fillOpacity\": 0.75}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove '90 - Zones foraines' from quartiers\n",
+    "import geopandas\n",
+    "quartiers = json.load(open('data/raw/maps/quartiers.geojson'))\n",
+    "quartiers_pd = geopandas.read_file('data/raw/maps/quartiers.geojson')\n",
+    "quartiers_to_drop = (quartiers_pd['Name'] == '17 - Beaulieu / Grey / Boisy') | \\\n",
+    "                    (quartiers_pd['Name'] == '90 - Zones foraines')\n",
+    "quartiers_dropped_pd = quartiers_pd[~quartiers_to_drop]\n",
+    "\n",
+    "quartiers_dropped_pd = quartiers_dropped_pd.merge(price_by_quartiers_all, left_on='Name', right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_ = getMap()\n",
+    "folium.GeoJson(quartiers_dropped_pd.to_json(), \n",
+    "               style_function=style_function_quartiers,\n",
+    "               tooltip=folium.GeoJsonTooltip(['price', 'Name'])\n",
+    "              ).add_to(map_)\n",
+    "                \n",
+    "map_.save('export/price_by_quartiers_all_parcelles.html')\n",
+    "map_"
+   ]
   }
  ],
  "metadata": {
